// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles "no" postback with no other existing feedbacks 1`] = `
Object {
  "data": Object {
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "💡 I think the reply is not useful and I suggest:
我覺得不行",
    "timestamp": 1519019734813,
    "type": "text",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "text": "Thanks. You're the first one who gave feedback on this reply!",
      "type": "text",
    },
    Object {
      "text": "💁 If you have a better reply, feel free to submit it to https://cofacts.hacktabl.org/article/AWDZYXxAyCdS-nWhumlz .",
      "type": "text",
    },
  ],
  "state": "ASKING_REPLY_FEEDBACK",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`handles "no" postback with other existing feedback comments 1`] = `
Object {
  "data": Object {
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "💡 I think the reply is not useful and I suggest:
我覺得不行",
    "timestamp": 1519019734813,
    "type": "text",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "text": "We've received feedback from you and 1 other users!",
      "type": "text",
    },
    Object {
      "text": "💁 If you have a better reply, feel free to submit it to https://cofacts.hacktabl.org/article/AWDZYXxAyCdS-nWhumlz .",
      "type": "text",
    },
  ],
  "state": "ASKING_REPLY_FEEDBACK",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`handles "yes" postback with no other existing feedbacks 1`] = `
Object {
  "data": Object {
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedArticleText": "(0)(1)(/)(0)(9)(line)免費貼圖

「[全螢幕貼圖]生活市集x生活小黑熊」
https://line.me/S/sticker/10299

「松果購物 x 狗與鹿(動態貼圖) 」
https://line.me/S/sticker/10300

「LINE TV X 我的男孩限免貼圖」
https://line.me/S/sticker/10207",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "👍 I think the reply is useful and I want to add:
Reply is good!",
    "timestamp": 1519019734813,
    "type": "text",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "text": "Thanks. You're the first one who gave feedback on this reply!",
      "type": "text",
    },
    Object {
      "altText": "Don't forget to forward the messages above to others and share with them!
📱 Please proceed on your mobile phone.",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "Don't forget to forward the messages above to others and share with them!",
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "paddingAll": "lg",
          "spacing": "md",
          "type": "box",
        },
        "footer": Object {
          "contents": Array [
            Object {
              "action": Object {
                "label": "Share to friends",
                "type": "uri",
                "uri": "https://line.me/R/msg/text/?Someone%20says%20the%20message%20%E2%80%9C(0)(1)(/)(0)(%E2%8B%AF%E2%8B%AF%E2%80%9D%20invalid%20request.%0A%0APlease%20refer%20to%20https://cofacts.hacktabl.org/article/AWDZYXxAyCdS-nWhumlz%20for%20more%20information,%20replies%20and%20references.",
              },
              "color": "#ffb600",
              "style": "primary",
              "type": "button",
            },
            Object {
              "action": Object {
                "label": "See reported message",
                "type": "uri",
                "uri": "https://cofacts.hacktabl.org/article/AWDZYXxAyCdS-nWhumlz",
              },
              "color": "#ffb600",
              "style": "link",
              "type": "button",
            },
          ],
          "layout": "vertical",
          "spacing": "sm",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
  ],
  "state": "ASKING_REPLY_FEEDBACK",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`handles "yes" postback with other existing feedbacks 1`] = `
Object {
  "data": Object {
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedArticleText": "(0)(1)(/)(0)(9)(line)免費貼圖

「[全螢幕貼圖]生活市集x生活小黑熊」
https://line.me/S/sticker/10299

「松果購物 x 狗與鹿(動態貼圖) 」
https://line.me/S/sticker/10300

「LINE TV X 我的男孩限免貼圖」
https://line.me/S/sticker/10207",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "👍 I think the reply is useful and I want to add:
Reply is good!",
    "timestamp": 1519019734813,
    "type": "text",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "text": "We've received feedback from you and 1 other users!",
      "type": "text",
    },
    Object {
      "altText": "Don't forget to forward the messages above to others and share with them!
📱 Please proceed on your mobile phone.",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "Don't forget to forward the messages above to others and share with them!",
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "paddingAll": "lg",
          "spacing": "md",
          "type": "box",
        },
        "footer": Object {
          "contents": Array [
            Object {
              "action": Object {
                "label": "Share to friends",
                "type": "uri",
                "uri": "https://line.me/R/msg/text/?Someone%20says%20the%20message%20%E2%80%9C(0)(1)(/)(0)(%E2%8B%AF%E2%8B%AF%E2%80%9D%20invalid%20request.%0A%0APlease%20refer%20to%20https://cofacts.hacktabl.org/article/AWDZYXxAyCdS-nWhumlz%20for%20more%20information,%20replies%20and%20references.",
              },
              "color": "#ffb600",
              "style": "primary",
              "type": "button",
            },
            Object {
              "action": Object {
                "label": "See reported message",
                "type": "uri",
                "uri": "https://cofacts.hacktabl.org/article/AWDZYXxAyCdS-nWhumlz",
              },
              "color": "#ffb600",
              "style": "link",
              "type": "button",
            },
          ],
          "layout": "vertical",
          "spacing": "sm",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
  ],
  "state": "ASKING_REPLY_FEEDBACK",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;
